--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
 
-	<uses-permission android:name="android.permission.RECORD_AUDIO" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
-		android:maxSdkVersion="28" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
-		android:maxSdkVersion="32" />
-	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-	<uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
 	<application
 		android:allowBackup="true"
-		android:dataExtractionRules="@xml/data_extraction_rules"
-		android:fullBackupContent="@xml/backup_rules"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
@@ -32,20 +21,10 @@
 			</intent-filter>
 		</activity>
 		
-		<!-- 注册提醒广播接收器 -->
-		<receiver 
-		    android:name=".receiver.ReminderReceiver" 
-		    android:exported="false">
-		    <intent-filter>
-		        <action android:name="android.intent.action.BOOT_COMPLETED" />
-		    </intent-filter>
-		</receiver>
-
 		<service 
-		    android:name=".service.ReminderService" 
+		    android:name=".BlockerService" 
 		    android:enabled="true"
-		    android:exported="false"
-		    android:foregroundServiceType="dataSync" />
+		    android:exported="false" />
 	</application>
 
 </manifest>
